add more stub italy WWII

--- a/db/events.yaml
+++ b/db/events.yaml
@@ -42,6 +42,10 @@ events:
     type: fondazione
     location: USA
     outcome: trilaterale
+  1976-entebbe-raid:
+    year: 1976
+    type: military
+    location: Entebbe, Uganda
   1978-ehden-massacre:
     year: 1978
     month: 6
@@ -61,6 +65,10 @@ events:
     location: Beirut, Achrafieh
     outcome: Bashir assassinato, Sabra e Shatila, Amine presidente
     note: Bomba SSNP, Habib Shartouni
+  1983-israel-bank-crisis:
+    year: 1983
+    type: crisis
+    location: Israel
   1990-invasione-kuwait:
     year: 1990
     month: 8
