--- a/db/events.yaml
+++ b/db/events.yaml
@@ -225,6 +225,10 @@ events:
     type: crisi
     location: globale
     outcome: great-reset
+  2024-caduta-assad:
+    year: 2024
+    type: regime-change
+    location: Syria
   2025-iran-protests:
     year: 2025
     type: uprising
