--- a/db/families.yaml
+++ b/db/families.yaml
@@ -1250,6 +1250,13 @@ families:
     sector: mining, banking, shipping
     status: active
     note: Richest family in South America. Croatian origins.
+  mansour-family:
+    origin: Egypt
+    members:
+    - person: mohamed-mansour
+      generation: 2
+    - person: youssef-mansour
+      generation: 2
   marinho:
     origin: Brazil
     founder: irineu-marinho
@@ -1907,6 +1914,13 @@ families:
     members:
     - person: ricardo-salinas-pliego
       generation: 4
+  sawiris-family:
+    origin: Egypt
+    members:
+    - person: nassef-sawiris
+      generation: 2
+    - person: naguib-sawiris
+      generation: 2
   saxe-coburg-gotha:
     origin: Germany
     founder: leopold-i-belgium
