--- a/db/families.yaml
+++ b/db/families.yaml
@@ -183,6 +183,17 @@ families:
     - person: ibn-saud
       generation: 6
       role: founder
+  al-thani:
+    origin: Qatar
+    note: Famiglia regnante del Qatar dal 1868
+    members:
+    - person: tamim-bin-hamad-al-thani
+      generation: 4
+      role: head
+    - person: hamad-bin-khalifa-al-thani
+      generation: 3
+    - person: al-mayassa-bint-hamad-al-thani
+      generation: 4
   aliyev:
     origin: Nakhchivan, Azerbaijan
     founder: heydar-aliyev
