--- a/db/families.yaml
+++ b/db/families.yaml
@@ -120,6 +120,9 @@ families:
     - person: maktoum-bin-mohammed-al-maktoum
       generation: 3
       role: heir
+    - person: ahmed-bin-saeed-al-maktoum
+      generation: 3
+      role: member
   al-nahyan:
     origin: Abu Dhabi, UAE
     founder: sheikh-zayed-bin-sultan
@@ -953,6 +956,23 @@ families:
     - person: john-heinz
       generation: 4
       role: heir
+  herzog:
+    origin: POL-IRL-ISR
+    founder: yitzhak-halevi-herzog
+    sector: politics
+    status: active
+    members:
+    - person: isaac-herzog
+      generation: 3
+    - person: chaim-herzog
+      generation: 2
+    - person: mike-herzog
+      generation: 3
+    - person: yitzhak-halevi-herzog
+      generation: 1
+      role: founder
+    - person: yaakov-herzog
+      generation: 2
   hinduja:
     origin: IND
     founder: parmanand-hinduja
